--- a/source/user-guest/code/views/partials/toolbar.ejs
+++ b/source/user-guest/code/views/partials/toolbar.ejs
@@ -51,7 +51,7 @@
             <ul class="submenu dropdown-menu">
               <li><a class="dropdown-item" href="/courses/Development/Game Development">Game Development</a></li>
               <li><a class="dropdown-item" href="/courses/Development/Mobile Development">Mobile Development</a></li>
-              <li><a class="dropdown-item" href="/courses/Development/Programing Language">Programing Language </a></li>
+              <li><a class="dropdown-item" href="/courses/Development/Programming Languages">Programing Languages </a></li>
               <li><a class="dropdown-item" href="/courses/Development/Data Science">Data Science</a></li>
               <li><a class="dropdown-item" href="/courses/Development/Web Development">Web Development</a></li>
             </ul>
@@ -92,6 +92,11 @@
               <i class="fas fa-user-circle"></i> Võ Thế Minh
             </a>
             <ul class="dropdown-menu">
+              <li>
+                <a href="/users/account">
+                  <i class="fas fa-folder-open"></i> Account
+                </a>
+              </li>
               <li>
                 <a href="/my-courses">
                   <i class="fas fa-folder-open"></i> My Courses
