--- a/source/user-guest/code/views/user/login.ejs
+++ b/source/user-guest/code/views/user/login.ejs
@@ -23,7 +23,7 @@
                 or <a href="#" style="color: red;">Forgot password?</a>
             </p>
             <p class="lead mt-4">
-                No Account? <a href="#" style="color: red;">Register</a>
+                No Account? <a href="/users/register" style="color: red;">Register</a>
             </p>
         </div>
     </div>
