--- a/source/user-guest/code/views/user/register.ejs
+++ b/source/user-guest/code/views/user/register.ejs
@@ -15,12 +15,12 @@
                 <div class="form-group">
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" class="form-control"
-                        placeholder="Create Password"/>
+                        placeholder="Create Password" autocomplete="new-password"/>
                 </div>
                 <div class="form-group">
                     <label for="password2">Confirm Password</label>
                     <input type="password" id="password2" name="password2" class="form-control"
-                        placeholder="Confirm Password"/>
+                        placeholder="Confirm Password" autocomplete="new-password"/>
                 </div>
                 <div class="form-group">
                     <input type="radio" name="gender" id="female" value="female" checked="checked">
