--- a/source/admin/views/admin/lecturer/lecturerEdit.ejs
+++ b/source/admin/views/admin/lecturer/lecturerEdit.ejs
@@ -127,6 +127,20 @@
                                                                     value="">
                                                             </div>
                                                         </div>
+                                                        <div class="form-group ">
+                                                            <label class="col-sm-2 control-label" for="my-input">Status</label>
+                                                            <div class="col-sm-10">
+                                                                <select class="form-control" type="text" name="status">
+                                                                    <% if(data.Lecturer_info.status==true){ %> 
+                                                                        <option value="1" selected="selected"> Enable</option>
+                                                                        <option value="0" > Disable</option>
+                                                                    <% }else{ %> 
+                                                                        <option value="1"> Enable</option>
+                                                                        <option value="0" selected="selected"> Disable</option>
+                                                                    <% }  %> 
+                                                                </select>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
