--- a/source/admin/views/admin/student/studentAdd.ejs
+++ b/source/admin/views/admin/student/studentAdd.ejs
@@ -79,6 +79,15 @@
                                                     <input  class="form-control" type="password" name="confirm" value="" >
                                                 </div>
                                             </div>
+                                            <div class="form-group ">
+                                                <label class="col-sm-2 control-label" for="my-input">Status</label>
+                                                <div class="col-sm-10">
+                                                    <select class="form-control" type="text" name="status">
+                                                            <option value="1" selected="selected"> Enable</option>
+                                                            <option value="0" > Disable</option>
+                                                    </select>
+                                                </div>
+                                            </div>
                                         </div>
                                 </div>
                             </form>
