--- a/source/admin/views/admin/student/studentEdit.ejs
+++ b/source/admin/views/admin/student/studentEdit.ejs
@@ -90,6 +90,20 @@
                                                     <input  class="form-control" type="password" name="confirm" value="" >
                                                 </div>
                                             </div>
+                                            <div class="form-group ">
+                                                <label class="col-sm-2 control-label" for="my-input">Status</label>
+                                                <div class="col-sm-10">
+                                                    <select class="form-control" type="text" name="status">
+                                                        <% if(data.student_info.status==true){ %> 
+                                                            <option value="1" selected="selected"> Enable</option>
+                                                            <option value="0" > Disable</option>
+                                                        <% }else{ %> 
+                                                            <option value="1"> Enable</option>
+                                                            <option value="0" selected="selected"> Disable</option>
+                                                        <% }  %> 
+                                                    </select>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
