--- a/source/user-guest/code/views/partials/toolbar.ejs
+++ b/source/user-guest/code/views/partials/toolbar.ejs
@@ -89,7 +89,7 @@
         <div class="col-sm-6 text-right">
           <div class="nav-item dropdown">
             <a href="/users/account" data-toggle="dropdown" class="nav-link dropdown-toggle">
-              <i class="fas fa-user-circle"></i> Võ Thế Minh
+              <i class="fas fa-user-circle"></i> <%= user.name %> 
             </a>
             <ul class="dropdown-menu">
               <li>
