--- a/source/user-guest/code/views/partials/card-course.ejs
+++ b/source/user-guest/code/views/partials/card-course.ejs
@@ -1,45 +1,95 @@
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"
+        integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA=="
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"
+        integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A=="
+        crossorigin="anonymous" />
+
+    <title>Home Page</title>
+</head>
 <style>
-    .card-courses {
-        display: inline-block;
+    img {
+        width: 300px;
+        height: 170px;
     }
-
-    .courses-detail {
-        display: none;
+    .category {
+        
     }
-
-    .card-courses:hover .courses-detail {
-        display: block;
+    .nameCourse {
+        color: crimson;
     }
-
-    .card-courses {
-        margin: auto;
-        width: 285px;
+    .yellow-star {
+        color: yellow;
+    }
+    .btn-outline-danger, .btn-outline-primary, .btn-outline-success{
+        width: 100%;
     }
 </style>
-<a href="/course/<%= course.name %>">
-    <div class="card-courses">
-        <div class="courses">
-            <img class="poster" src="<%= course.poster%>" width="285px" height="150px">
-            <div>
-                <h4 style="display: inline-block;" class="name"><%=  course.name%> </h4>
-                <div style="display: inline-block;">(<%= course.numberOfView%> lượt xem)</div>
+<div class="course-carousel">
+    <div class="owl-carousel owl-theme owl-loaded">
+        <div class="owl-stage-outer">
+            <div class="owl-stage">
+                <% courses.forEach(course => { %>
+                <div class="owl-item">
+                    <a href="/course/<%= course.name%>">
+                        <div class="course">
+                            <div class="image">
+                                <img src="<%= course.poster%>">
+                            </img>
+                            </div>
+                            <div class="course-detail">
+                                <h5 class="nameCourse">
+                                    <%=course.name%>
+                                </h5>
+                                <% if (type == 'proCourse') { %>
+                                <button class="btn btn-outline-danger">HOT</button>
+                                <% } %>
+                                <% if (type == 'mostViewCourse') { %>
+                                    <button class="btn btn-outline-primary">MOST VIEW</button>
+                                <% } %>
+                                <% if (type == 'latestCourse') { %>
+                                    <button class="btn btn-outline-success">LATEST</button>
+                                <% } %>
+                                <h5 class='category'><%=course.idCourseTopic.name%></h5>
+                                <i class="star0 fa fa-star yellow-star"></i>
+                                <i class="star1 fa fa-star yellow-star"></i>
+                                <i class="star2 fa fa-star yellow-star"></i>
+                                <i class="star3 fa fa-star yellow-star"></i>
+                                <i class="star4 fa fa-star yellow-star"></i>
+                                <p style="color: black;"><%= course.numberOfView %> luợt xem-<%= course.numberOfStudent %> học sinh  </p>
+                            </div>
+                            <div class="course-more-detail" style="color: black;">
+                                Giảng viên : <% if(course.idLecturer){ %><%=course.idLecturer.name%><% }%>
+                                10 USD <br>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <% }); %>
             </div>
-
-            <p class="lecturer">Giáo viên: <%=  course.idLecturer.name%></p>
-            <p class="evaluation" style="display: inline-block;"><%=  course.evaluationPoint%></p>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <p style="display: inline-block;" class="numberOfEvaluation">(<%=  course.userEvaluations.length%> luợt
-                đánh giá)
-            </p>
-            <p class="tuition">$<%=  course.tuition%></p>
-        </div>
-        <div class="courses-detail">
-            <p><%=  course.numberOfStudent%> đang học</p>
-            <p>Chủ đề: <%=  course.idCourseTopic.name%></p>
         </div>
     </div>
-</a>
+</div>
+
